test/e2e/fail/013-unknown-variant/input.tjs
enum Shape {
    Circle(Int),
    Rect(Int, Int),
}

let s = Shape::Bogus;
